--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <nav class="navbar">
         <a href="./index.html"></a>
              <img src="/img/logo.png" class="logo" alt="logo de fixbike">
-        <ul class="menu">
+        <ul class="menu" id="menu">
              <li><a href="./index.html" id="nav-menu">INICIO</a></li>
-             <li><a href="./paginas/servicios.html"  id="nav-menu">SERVICIOS</a></li>
-             <li><a href="./paginas/productos.html"  id="nav-menu">PRODUCTOS</a></li>
-             <li><a href="./paginas/blog.html"  id="nav-menu">BLOG</a></li>
-             <li><a href="./paginas/contacto.html"  id="nav-menu">CONTACTO</a></li>
+             <li><a href="./paginas/servicios.html" id="nav-menu">SERVICIOS</a></li>
+             <li><a href="./paginas/productos.html" id="nav-menu">PRODUCTOS</a></li>
+             <li><a href="./paginas/blog.html" id="nav-menu">BLOG</a></li>
+             <li><a href="./paginas/contacto.html" id="nav-menu">CONTACTO</a></li>
         </ul>
-        <div class="menu-bar">
-            <i class="fa-solid fa-bars"></i>
+        <div class="menu-bar" id="menu-bar">
+            <img src="./img/menu-bar.png" class="hamburger-btn"alt="boton menu hamburgesa">
         </div>
     </nav>
     <!-- termina nav -->
@@ -126,5 +126,6 @@
         </div>
     </footer>
     <!-- termina footer -->
+    <script src="/js/script.js"></script>
 </body>
 </html>
