--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -220,15 +220,22 @@
         </div> 
         <div class="social">
             <h3>SIGUENOS EN NUESTRAS REDES </h3>
-            <a href="https://www.instagram.com/fixbike/" target="_blank">
-                <img src="/img/socialmedia/instagram.png" alt="logo de instagram">
-            </a>
-            <a href="https://www.facebook.com/FixBikeTalca" target="_blank">
-                <img src="/img/socialmedia/facebook.png" alt="logo de facebook">
-            </a>
-            <a href="#">
-                <img src="/img/socialmedia/whatsapp.png" alt="logo de whatsapp">
-            </a>
+        </div>
+        <div>
+            <ul class="social-icons">
+                <li>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                </li>
+            </ul>
         </div>
     </footer>
     <!-- termina footer -->
