--- a/index.html
+++ b/index.html
@@ -1,79 +1,115 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIXBIKE TIENDA & TALLER</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mediaQuery.css">
+    <meta name="description" content="Reparaciones , mantenciones y cursos de bicletas">
+    <title>FIXBIKE</title>
     <link rel="shorcut icon" href="./img/favicon.png">
-    <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script>
-
-</head> 
-<div class="anuncio">
-    <p>Escribenos al +56912345678</p>
-</div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+</head>
 <body>
-    <!-- inicia nav -->
-    <nav class="navbar">
-        <a href="./index.html"></a>
-             <img src="/img/logo.png" class="logo" alt="logo de fixbike">
-        <ul class="menu" id="menu">
-             <li><a href="./index.html" id="nav-menu">INICIO</a></li>
-             <li><a href="./paginas/servicios.html" id="nav-menu">SERVICIOS</a></li>
-             <li><a href="./paginas/productos.html" id="nav-menu">PRODUCTOS</a></li>
-             <li><a href="./paginas/blog.html" id="nav-menu">BLOG</a></li>
-             <li><a href="./paginas/contacto.html" id="nav-menu">CONTACTO</a></li>
-        </ul>
-        <div class="menu-bar" id="menu-bar">
-            <img src="./img/menu-bar.png" class="hamburger-btn"alt="boton menu hamburgesa">
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="Logo de Fixbike"></a>
+          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/productos.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/servicios.html">SERVICIOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/blog.html">BLOG</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/contacto.html">CONTACTO</a>
+              </li>
+             </ul>
+          </div>
         </div>
     </nav>
-    <!-- termina nav -->
-
-    <!-- inicia header -->
-    <header class=head>
-        <h3>DE CICLISTAS PARA CICLISTAS</h3>
-        <h1>BIENVENIDO A FIXBIKE</h1>
-        <p>APASIONADOS POR LAS BICIS DESDE LOS 80'S. 
-            FUNDADOS EN 2015 FIXBIKE, NUESTRO OBJETIVO ES BRINDAR UNA ATENCION INTEGRAL AL CICLISTA
-        </p>
-        <a href="./paginas/contacto.html"><button class="btn" id="btn-head">CONTACTANOS AQUI!</button></a> 
-     </header>
-    <!-- termina header -->
-
-    <!-- inicia main -->
-    <main class="main">
-        <!-- inicia servicios -->
-         <section class="servicios">
-            <div>
-                <h2>SERVICIOS</h2>
-                <p>TODOS LO QUE NECESITAS PARA MANTENER TU BICILETA EN LAS MEJORES
-                    CONDICIONES LAS ENCUENTRAS EN FIXBIKE, DESDE LOS TRABAJOS MAS COMPLEJOS HASTA LOS DETALLES MAS FINOS
-                </p>
-            </div> 
-            <div>
-                <a href="./paginas/servicios.html"><button class="btn-servicios">MANTENCIONES</button></a> 
-                <button class="btn-servicios">PINTURA</button>
-                <button class="btn-servicios">RESTAURACIONES</button>
+    <header class="header">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row align-items-center g-5 py-5">
+              <div class="col-lg-6">
+                <h1 class="display-5 fw-bold lh-1 mb-3">DE CICLISTAS PARA CICLISTAS</h1>
+                <p class="lead">APASIONADOS POR LAS BICIS DESDE LOS 80'S. 
+                    FUNDADOS EN 2015 FIXBIKE, NUESTRO OBJETIVO ES BRINDAR UNA ATENCION INTEGRAL AL CICLISTA.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">CONTACTANOS
+                    <a href="/paginas/contacto.html"></a>
+                  </button>
+                </div>
+              </div>
             </div>
-         </section>
-         <!-- termina servicios -->
-
-         <!-- inicia marcas -->
-        <section class="marcas">
-            <div>
+          </div>
+    </header>
+    <section class="servicios">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a href="./paginas/servicios.html">
+                    <img src="./img/bg-carousel-clases.jpg" class="d-block w-100" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>CLASES DE MTB</h3>
+                    <p>Atrevete a iniciar en el Mtb con clases practicas y buena onda.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="./paginas/servicios.html">
+                    <img src="./img/bg-carousel-mantencion.jpg" class="d-block w-100" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>MANTENCIONES</h3>
+                    <p>Reparamos y hacemos servicio a cualquier tipo de bicicleta.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="./paginas/servicios.html">
+                    <img src="./img/bg-carousel-pintura.jpg" class="d-block w-100" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>PINTURA</h3>
+                    <p>¿Nuevo diseño? Consulta por nuestros servicios de pintura.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section>
+    <section>
+    <section class="marcas">
+        <div>
                 <h3>MARCAS CON LAS QUE TRABAJAMOS</h3>
                 <p>EN FIXBIKE TRABAJAMOS CON LAS MEJORES MARCAS PARA ENTREGAR LO QUE NECESITES.</p>
             </div>
             <div class=logo-marcas>
                 <ul>
                     <a href="./paginas/productos.html">
-                        <img src="./img/brands/bell-helmets.png" alt="bell-helmets">
+                        <img src="./img/brands/bell.png" alt="bell-helmets">
                     </a>
                     <a href="./paginas/productos.html"> 
-                        <img src="./img/brands/fox-race.png" alt="fox-race"> 
+                        <img src="./img/brands/fox.png" alt="fox-race"> 
                     </a> 
                     <a href="./paginas/productos.html">
                         <img src="./img/brands/michelin.png" alt="michelin"> 
@@ -84,55 +120,46 @@
                     <a href="./paginas/productos.html">
                         <img src="./img/brands/shimano.png" alt="shimano"> 
                     </a>        
+                    <a href="./paginas/productos.html">
+                        <img src="./img/brands/sram.png" alt="sram logo"> 
+                    </a> 
+                    <a href="./paginas/productos.html">
+                        <img src="./img/brands/yeti.png" alt="sram logo"> 
+                    </a> 
                 </ul>
              </div>
-        </section>
-        <!-- termina marcas -->
-    </main>
-    <!-- termina main -->
-
-    <!-- inicia footer -->
-    <footer class="footer">
-        <div class="menu-footer">
-            <ul>
-                <li>
-                    <a href="../index.html" id="nav-menu">INICIO</a>
-                </li>
-                <li>
-                    <a href="./paginas/servicios.html" id="nav-menu">SERVICIOS</a>
-                </li>
-                <li>
-                    <a href="./paginas/productos.html" id="nav-menu">PRODUCTOS</a>
-                </li>
-                <li>
-                    <a href="./paginas/blog.html" id="nav-menu">BLOG</a>
-                </li>
-                <li>
-                    <a href="./paginas/contacto.html" id="nav-menu">CONTACTO</a>
-                </li>
-            </ul>
-        </div> 
-        <div class="social">
-            <h3>SIGUENOS EN NUESTRAS REDES </h3>
-        </div>
-        <div>
-            <ul class="social-icons">
-                <li>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
-                </li>
-            </ul>
+    </section>
+    <footer class="footer-07">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <h2>Siguenos en nuestras redes</h2>
+                    <p class="menu">
+                     <a href="./index.html">Inicio</a>
+                     <a href="./paginas/productos.html">Productos</a>
+                     <a href="./paginas/servicios.html">Servicios</a>
+                     <a href="./paginas/blog.html">Blog</a>
+                     <a href="./paginas/contacto.html">Contacto</a>
+                    </p>
+                    <ul class="social-icons">
+                      <li>
+                        <a href="https://www.instagram.com/fixbike/"><i class="fab fa-instagram"></i></a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/FixBikeTalca"><i class="fab fa-facebook"></i></a>
+                      </li>
+                      <li>
+                        <a href="https://www.whatsapp.com/?lang=es"><i class="fab fa-whatsapp"></i></a>
+                      </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
-    <!-- termina footer -->
-    <script src="/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
